[gd_scene format=3 uid="uid://3qun24bndqll"]

[ext_resource type="Script" uid="uid://d3hm5bn8vmd2" path="res://addons/asset_placer/ui/asset_library_window/asset_library_window.gd" id="1_l06eo"]
[ext_resource type="PackedScene" uid="uid://dua2vx4bi1gmf" path="res://addons/asset_placer/ui/asset_placer_options/asset_placer_options.tscn" id="2_qx6qk"]
[ext_resource type="Script" uid="uid://dmicn3kmr620j" path="res://addons/asset_placer/utils/system_icon.gd" id="3_gvdec"]

[sub_resource type="Texture2D" id="Texture2D_gvdec"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_gvdec")
icon_name = &"Search"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="Texture2D" id="Texture2D_yvyyx"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_gvdec")
icon_name = &"Groups"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cqey"]
bg_color = Color(0.25038558, 0.49941733, 6.738305e-07, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 2.0
expand_margin_right = 2.0
anti_aliasing = false

[sub_resource type="Texture2D" id="Texture2D_5cqey"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_gvdec")
icon_name = &"FolderCreate"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="Texture2D" id="Texture2D_qx6qk"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_gvdec")
icon_name = &"Reload"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="Texture2D" id="Texture2D_mdpb8"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_gvdec")
icon_name = &"FolderCreate"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[node name="AssetLibraryWindow" type="Control" unique_id=506678304]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_l06eo")

[node name="Panel" type="Panel" parent="." unique_id=262440054]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MainContent" type="HSplitContainer" parent="Panel" unique_id=1472852989]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offsets = PackedInt32Array(-370)
split_offset = -370

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MainContent" unique_id=1132432795]
layout_mode = 2
size_flags_horizontal = 3

[node name="AssetPlacerOptions" parent="Panel/MainContent/ScrollContainer" unique_id=1949036206 instance=ExtResource("2_qx6qk")]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
localize_numeral_system = false

[node name="MarginContainer" type="MarginContainer" parent="Panel/MainContent" unique_id=842648802]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MainContent/MarginContainer" unique_id=1417530760]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MainContent/MarginContainer/VBoxContainer" unique_id=441496603]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 2

[node name="Label" type="Label" parent="Panel/MainContent/MarginContainer/VBoxContainer/HBoxContainer" unique_id=205718003]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Assets"

[node name="TextureRect" type="TextureRect" parent="Panel/MainContent/MarginContainer/VBoxContainer/HBoxContainer" unique_id=278938781]
layout_mode = 2
size_flags_vertical = 4
texture = SubResource("Texture2D_gvdec")
stretch_mode = 5

[node name="SearchField" type="LineEdit" parent="Panel/MainContent/MarginContainer/VBoxContainer/HBoxContainer" unique_id=1100420788]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
placeholder_text = "Filter assets by name"

[node name="FilterButton" type="Button" parent="Panel/MainContent/MarginContainer/VBoxContainer/HBoxContainer" unique_id=2117272892]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Edit"
icon = SubResource("Texture2D_yvyyx")

[node name="FiltersLabel" type="Label" parent="Panel/MainContent/MarginContainer/VBoxContainer/HBoxContainer/FilterButton" unique_id=295454226]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -18.22
offset_top = -18.02
offset_right = 8.780006
offset_bottom = 12.98
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_5cqey")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddFolderButton" type="Button" parent="Panel/MainContent/MarginContainer/VBoxContainer/HBoxContainer" unique_id=1102426537]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "FolderCreate"
icon = SubResource("Texture2D_5cqey")

[node name="ReloadButton" type="Button" parent="Panel/MainContent/MarginContainer/VBoxContainer/HBoxContainer" unique_id=2029557956]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Sync Assets"
icon = SubResource("Texture2D_qx6qk")

[node name="ProgressBar" type="ProgressBar" parent="Panel/MainContent/MarginContainer/VBoxContainer/HBoxContainer" unique_id=588663065]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
indeterminate = true
editor_preview_indeterminate = true

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MainContent/MarginContainer/VBoxContainer" unique_id=2072525275]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="HFlowContainer" parent="Panel/MainContent/MarginContainer/VBoxContainer/ScrollContainer" unique_id=77734003]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EmptyCollectionContent" type="CenterContainer" parent="Panel/MainContent/MarginContainer/VBoxContainer" unique_id=1461961802]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/MainContent/MarginContainer/VBoxContainer/EmptyCollectionContent" unique_id=1655046853]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="Panel/MainContent/MarginContainer/VBoxContainer/EmptyCollectionContent/HBoxContainer" unique_id=2098095087]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "No assets in this collection"
horizontal_alignment = 1

[node name="Space" type="Control" parent="Panel/MainContent/MarginContainer/VBoxContainer/EmptyCollectionContent/HBoxContainer" unique_id=1410294658]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/MainContent/MarginContainer/VBoxContainer/EmptyCollectionContent/HBoxContainer" unique_id=666705575]
layout_mode = 2
text = "This collection currently has no assets assigned. 
You can Drag and Drop assets/folders into this window to fix that!"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Panel/MainContent/MarginContainer/VBoxContainer/EmptyCollectionContent/HBoxContainer" unique_id=152121421]
layout_mode = 2
text = "Or"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Panel/MainContent/MarginContainer/VBoxContainer/EmptyCollectionContent/HBoxContainer" unique_id=561851736]
layout_mode = 2

[node name="EmptyCollectionViewAddFolderBtn" type="Button" parent="Panel/MainContent/MarginContainer/VBoxContainer/EmptyCollectionContent/HBoxContainer/CenterContainer" unique_id=51939943]
unique_name_in_owner = true
layout_mode = 2
text = "Add Folders  Using Dialog"
icon = SubResource("Texture2D_mdpb8")

[node name="EmptySearchContent" type="CenterContainer" parent="Panel/MainContent/MarginContainer/VBoxContainer" unique_id=1627979446]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/MainContent/MarginContainer/VBoxContainer/EmptySearchContent" unique_id=1687799489]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="Panel/MainContent/MarginContainer/VBoxContainer/EmptySearchContent/HBoxContainer" unique_id=1954321548]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "No assets found"
horizontal_alignment = 1

[node name="Space" type="Control" parent="Panel/MainContent/MarginContainer/VBoxContainer/EmptySearchContent/HBoxContainer" unique_id=1557452544]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/MainContent/MarginContainer/VBoxContainer/EmptySearchContent/HBoxContainer" unique_id=307691956]
layout_mode = 2
text = "No assets found that would have this name
You can Drag and Drop assets/folders into this window to fix that!"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Panel/MainContent/MarginContainer/VBoxContainer/EmptySearchContent/HBoxContainer" unique_id=1736279736]
layout_mode = 2
text = "Or"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Panel/MainContent/MarginContainer/VBoxContainer/EmptySearchContent/HBoxContainer" unique_id=1673895720]
layout_mode = 2

[node name="EmptyCollectionViewAddFolderBtn" type="Button" parent="Panel/MainContent/MarginContainer/VBoxContainer/EmptySearchContent/HBoxContainer/CenterContainer" unique_id=387310256]
layout_mode = 2
text = "Add Folders  Using Dialog"
icon = SubResource("Texture2D_mdpb8")

[node name="EmptyContent" type="CenterContainer" parent="Panel" unique_id=1468401479]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/EmptyContent" unique_id=103491198]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="Panel/EmptyContent/HBoxContainer" unique_id=884745382]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Welcome to Asset Placer!"
horizontal_alignment = 1

[node name="Space" type="Control" parent="Panel/EmptyContent/HBoxContainer" unique_id=787697230]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/EmptyContent/HBoxContainer" unique_id=1739992383]
layout_mode = 2
text = "Start by draggin and dropping your folder with Assets or Asset files themeselves to get started"

[node name="Label3" type="Label" parent="Panel/EmptyContent/HBoxContainer" unique_id=1577400719]
layout_mode = 2
text = "Or"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Panel/EmptyContent/HBoxContainer" unique_id=397274720]
layout_mode = 2

[node name="EmptyViewAddFolderBtn" type="Button" parent="Panel/EmptyContent/HBoxContainer/CenterContainer" unique_id=2005598539]
unique_name_in_owner = true
layout_mode = 2
text = "Add Folders  Using Dialog"
icon = SubResource("Texture2D_mdpb8")
